Fix footer styling and add overflow to main container

--- a/app/Footer.module.css
+++ b/app/Footer.module.css
@@ -5,19 +5,13 @@
     justify-content: center;
     padding: 1rem 0rem;
     gap: 1rem;
-    /* position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%; */
 }
 
 .footer a{
-    /* padding: 1rem; */
     text-decoration: wavy underline;
     display: flex;
 }
 
 .footer img{
     padding: 0 0.25rem;
-    
 }
