--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@ main {
   padding: 2rem;
   height: 100%;
   gap:1rem;
+  overflow: auto;
 }
 
 
